--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   provider: ^6.0.5
   cloud_firestore: ^4.9.3
   lottie: ^2.6.0
+  firebase_messaging: ^14.6.9
+  flutter_local_notifications: ^16.1.0
 
 dev_dependencies:
   flutter_test:
