--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   lottie: ^2.6.0
   firebase_messaging: ^14.6.9
   flutter_local_notifications: ^16.1.0
+  google_sign_in: ^6.1.5
+  internet_connection_checker: ^0.0.1+4
+  connectivity_plus: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
