--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="message_channel_id" />
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
