--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_sign_in: ^6.1.5
   internet_connection_checker: ^0.0.1+4
   connectivity_plus: ^2.3.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
